changed hybrid in automatic
git-svn-id: http://andoku.googlecode.com/svn/trunk@282 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/values/arrays.xml
+++ b/Andoku/res/values/arrays.xml
@@ -62,6 +62,6 @@
     <string-array name="pref_entries_input_method">
         <item>Cell Then Values</item>
         <item>Values Then Cell</item>
-        <item>Hybrid</item>
+        <item>Automatic</item>
     </string-array>
 </resources>
