--- a/Andoku/res/values-de/arrays.xml
+++ b/Andoku/res/values-de/arrays.xml
@@ -62,6 +62,6 @@
     <string-array name="pref_entries_input_method">
         <item>Feld dann Werte</item>
         <item>Werte dann Feld</item>
-        <item>Gemischt</item>
+        <item>Automatisch</item>
     </string-array>
 </resources>
