added preferences entry for fullscreen mode
git-svn-id: http://andoku.googlecode.com/svn/trunk@285 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/values/themes.xml
+++ b/Andoku/res/values/themes.xml
@@ -21,7 +21,7 @@
 
 <resources>
 
-    <style name="Theme.NoBackground.Light" parent="android:Theme.Light.NoTitleBar.Fullscreen">
+    <style name="Theme.NoBackground.Light" parent="android:Theme.Light.NoTitleBar">
         <item name="android:windowBackground">@null</item>
         <item name="buttonStyleKeypad">@style/KeypadButton</item>
         <item name="buttonStyleKeypadToggle">@style/KeypadToggleButton</item>
