--- a/Andoku/res/values/prefs.xml
+++ b/Andoku/res/values/prefs.xml
@@ -31,6 +31,8 @@
     <string name="pref_summary_highlight_digits">Highlights the digit that was last entered or is currently selected.</string>
     <string name="pref_title_show_timer">Show Timer</string>
     <string name="pref_summary_show_timer">Displays a stopwatch during the game.</string>
+    <string name="pref_title_fullscreen_mode">Fullscreen Mode</string>
+    <string name="pref_summary_fullscreen_mode">Hides the status bar and runs the game in fullscreen mode.</string>
 
     <!-- Category for "Behavior" related settings -->
     <string name="pref_category_behavior">Behavior</string>
