added dark theme
git-svn-id: http://andoku.googlecode.com/svn/trunk@297 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/values-de/arrays.xml
+++ b/Andoku/res/values-de/arrays.xml
@@ -58,6 +58,12 @@
         <item>Sowohl einfache als auch mehrfache Werte</item>
     </string-array>
 
+    <!-- Values for "Color Theme" (used by "Settings") -->
+    <string-array name="pref_entries_color_theme">
+        <item>Klassisch</item>
+        <item>Dunkel</item>
+    </string-array>
+
     <!-- Values for "Input Method" (used by "Settings") -->
     <string-array name="pref_entries_input_method">
         <item>Feld dann Werte</item>
