--- a/Andoku/res/values-de/prefs.xml
+++ b/Andoku/res/values-de/prefs.xml
@@ -29,6 +29,8 @@
     <string name="pref_summary_colored_regions">Verwende Farben zur Darstellung der Bereiche eines Sudoku-Rätsels.</string>
     <string name="pref_title_highlight_digits">Ziffern hervorheben</string>
     <string name="pref_summary_highlight_digits">Hebe die zuletzt eingegebene oder derzeit ausgewählte Ziffer hervor.</string>
+    <string name="pref_title_color_theme">Farbschema</string>
+    <string name="pref_summary_color_theme">Legt fest, welches Farbschema verwendet werden soll.</string>
     <string name="pref_title_show_timer">Stoppuhr anzeigen</string>
     <string name="pref_summary_show_timer">Zeigt eine Stoppuhr während des Spiels an.</string>
     <string name="pref_title_fullscreen_mode">Vollbildmodus</string>
