--- a/Andoku/res/values/prefs.xml
+++ b/Andoku/res/values/prefs.xml
@@ -29,6 +29,8 @@
     <string name="pref_summary_colored_regions">Use colors to display the regions of a sudoku puzzle.</string>
     <string name="pref_title_highlight_digits">Highlight Digits</string>
     <string name="pref_summary_highlight_digits">Highlights the digit that was last entered or is currently selected.</string>
+    <string name="pref_title_color_theme">Color Theme</string>
+    <string name="pref_summary_color_theme">Choose which color theme to use.</string>
     <string name="pref_title_show_timer">Show Timer</string>
     <string name="pref_summary_show_timer">Displays a stopwatch during the game.</string>
     <string name="pref_title_fullscreen_mode">Fullscreen Mode</string>
