--- a/Andoku/res/values-fr/prefs.xml
+++ b/Andoku/res/values-fr/prefs.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 
+<!--
   Andoku - a sudoku puzzle game for Android.
   Copyright (C) 2009, 2010  Markus Wiederkehr
 
@@ -37,7 +37,7 @@
 
     <!-- Titles and summaries for "Behavior" related settings -->
     <string name="pref_title_input_method">Méthode de validation</string>
-    <string name="pref_summary_input_method">Choisir comment l'on insère les chiffres dans la grille pendant le jeu.</string>
+    <string name="pref_summary_input_method">Choisir comment l\'on insère les chiffres dans la grille pendant le jeu.</string>
     <string name="pref_title_check_against_solution">Vérification des erreurs</string>
     <string name="pref_summary_check_against_solution">Vérifier la grille en fonction de la solution.</string>
 
@@ -49,6 +49,6 @@
     <string name="pref_summary_highlight_digits">Mise en valeur du dernier chiffre entré ou de la case sélectionnée.</string>
     <string name="pref_title_show_timer">Chronomètre</string>
     <string name="pref_summary_show_timer">Afficher un chronomètre pendant le jeu.</string>
-    <string name="pref_title_enable_eliminate_values"> \'Effacer un chiffre\'</string>
-    <string name="pref_summary_enable_eliminate_values">Authoriser l'option \'Effacer un chiffre\' au cours du jeu.</string>
+    <string name="pref_title_enable_eliminate_values">\'Effacer un chiffre\'</string>
+    <string name="pref_summary_enable_eliminate_values">Autoriser l\'option \'Effacer un chiffre\' au cours du jeu.</string>
  </resources>
