Added support for color sudokus
git-svn-id: http://andoku.googlecode.com/svn/trunk@317 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/values/arrays.xml
+++ b/Andoku/res/values/arrays.xml
@@ -32,6 +32,7 @@
         <item>X-Sudoku</item>
         <item>Hyper-Sudoku</item>
         <item>Percent-Sudoku</item>
+        <item>Color-Sudoku</item>
     </string-array>
 
     <!-- The possible difficulties (used by "Start New Game") -->
