--- a/Andoku/res/values-de/arrays.xml
+++ b/Andoku/res/values-de/arrays.xml
@@ -32,6 +32,7 @@
         <item>X-Sudoku</item>
         <item>Hyper-Sudoku</item>
         <item>Prozent-Sudoku</item>
+        <item>Farb-Sudoku</item>
     </string-array>
 
     <!-- The possible difficulties (used by "Start New Game") -->
