--- a/Andoku/res/values-fr/arrays.xml
+++ b/Andoku/res/values-fr/arrays.xml
@@ -32,6 +32,7 @@
         <item>X-Sudoku</item>
         <item>Hyper-Sudoku</item>
         <item>Pourcent-Doku</item>
+        <item>Sodoku-lor</item>
     </string-array>
 
     <!-- The possible difficulties (used by "Start New Game") -->
