--- a/Andoku/res/layout/save_game_list_item.xml
+++ b/Andoku/res/layout/save_game_list_item.xml
@@ -26,8 +26,8 @@
 
     <ImageView
         android:id="@+id/save_game_icon"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true" 
         android:layout_marginRight="6dp"/>
