Use 'Effacer des chiffres' for Eliminate values in French (suggested by Guillaume Semichon).
git-svn-id: http://andoku.googlecode.com/svn/trunk@361 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/values-fr/prefs.xml
+++ b/Andoku/res/values-fr/prefs.xml
@@ -49,6 +49,6 @@
     <string name="pref_summary_highlight_digits">Mise en valeur du dernier chiffre entré ou de la case sélectionnée.</string>
     <string name="pref_title_show_timer">Chronomètre</string>
     <string name="pref_summary_show_timer">Afficher un chronomètre pendant le jeu.</string>
-    <string name="pref_title_enable_eliminate_values">\'Effacer un chiffre\'</string>
-    <string name="pref_summary_enable_eliminate_values">Autoriser l\'option \'Effacer un chiffre\' au cours du jeu.</string>
+    <string name="pref_title_enable_eliminate_values">\'Effacer des chiffres\'</string>
+    <string name="pref_summary_enable_eliminate_values">Autoriser l\'option \'Effacer des chiffres\' au cours du jeu.</string>
  </resources>
