--- a/Andoku/res/values-fr/prefs.xml
+++ b/Andoku/res/values-fr/prefs.xml
@@ -19,6 +19,8 @@
   along with Andoku.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
+<!-- Translation by Guillaume Semichon -->
+
 <!-- Contains strings for the "Settings" activity -->
 <resources>
     <!-- Category for "Display" related settings -->
