Partial revert of revision 356: for some reason using a PopupWindow did not work properly on an G1 running Android 1.6. The green and red colors were displayed as gray..
git-svn-id: http://andoku.googlecode.com/svn/trunk@371 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/layout/andoku.xml
+++ b/Andoku/res/layout/andoku.xml
@@ -163,4 +163,9 @@
 
 </LinearLayout>
 
+<com.googlecode.andoku.FingertipView
+        android:id="@+id/viewFingertip"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"/>
+
 </merge>
