--- a/Andoku/res/layout/save_game_list_item.xml
+++ b/Andoku/res/layout/save_game_list_item.xml
@@ -20,7 +20,7 @@
 -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="55dp"
     android:padding="8dp">
 
@@ -43,7 +43,7 @@
 
     <TextView
         android:id="@+id/save_game_title"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/save_game_icon"
         android:layout_toLeftOf="@id/save_game_timer"
@@ -65,7 +65,7 @@
      
     <TextView
         android:id="@+id/save_game_difficulty"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/save_game_icon"
         android:layout_toLeftOf="@id/save_game_modified"
