--- a/Andoku/res/layout/about.xml
+++ b/Andoku/res/layout/about.xml
@@ -20,8 +20,8 @@
 -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="12dp"
@@ -35,7 +35,7 @@
     <WebView
         android:id="@+id/aboutWebView"
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:fadingEdge="vertical"/>
     <Button
