--- a/Andoku/res/layout/dialog_edit.xml
+++ b/Andoku/res/layout/dialog_edit.xml
@@ -20,7 +20,7 @@
 -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingLeft="20dp"
     android:paddingRight="20dp"
@@ -37,7 +37,7 @@
     <EditText
         android:id="@+id/name"
         android:layout_height="wrap_content"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:scrollHorizontally="true"
         android:autoText="false"
         android:capitalize="sentences"
