--- a/Andoku/res/layout/folders.xml
+++ b/Andoku/res/layout/folders.xml
@@ -20,8 +20,8 @@
 -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="12dp"
@@ -34,8 +34,8 @@
         android:text="@string/page_title_folder_list"
         android:paddingBottom="8dp"/>
     <ListView android:id="@id/android:list"
-        android:layout_width="fill_parent" 
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent" 
+        android:layout_height="match_parent"
         android:background="#88fffeff"
         android:cacheColorHint="#0000"
         android:layout_weight="1"/>
