--- a/Andoku/res/layout/about.xml
+++ b/Andoku/res/layout/about.xml
@@ -36,6 +36,7 @@
         android:id="@+id/aboutWebView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:background="#88fffeff"
         android:layout_weight="1"
         android:fadingEdge="vertical"/>
     <Button
