Finnish translation contributed by Rami Selin.
git-svn-id: http://andoku.googlecode.com/svn/trunk@414 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/values-fi/arrays.xml
+++ b/Andoku/res/values-fi/arrays.xml
@@ -42,8 +42,8 @@
   </string-array>
   <string-array name="pref_entries_colored_regions">
     <item>Ei koskaan</item>
-    <item>Perinteisellä ja palapelillä ilman erikoisia</item>
-    <item>Kaikilla paitsi palapelillä erikoisalueilla</item>
+    <item>Perint. ja pala. ilman erikoisia</item>
+    <item>Kaikilla paitsi pala. erikoisilla</item>
     <item>Aina</item>
   </string-array>
   <string-array name="pref_entries_highlight_digits">
