--- a/Andoku/res/layout/andoku.xml
+++ b/Andoku/res/layout/andoku.xml
@@ -25,8 +25,10 @@
     android:id="@+id/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp"
+    android:paddingTop="@dimen/andoku_padding_top"
+    android:paddingRight="@dimen/andoku_padding_right"
+    android:paddingBottom="@dimen/andoku_padding_bottom"
+    android:paddingLeft="@dimen/andoku_padding_left"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
