increased vertical distance between game grid and keypad on xlarge screens
git-svn-id: http://andoku.googlecode.com/svn/trunk@420 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/layout/andoku.xml
+++ b/Andoku/res/layout/andoku.xml
@@ -91,7 +91,8 @@
     <TableLayout
         android:id="@+id/keypad"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/andoku_keypad_distance">
 
         <TableRow>
             <ImageButton android:id="@+id/input_undo" android:src="@drawable/undo" style="@style/KeypadButton" android:layout_gravity="center_vertical" android:layout_height="match_parent"/>
