larger keypad buttons for xlarge screens
git-svn-id: http://andoku.googlecode.com/svn/trunk@421 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/values/dimensions.xml
+++ b/Andoku/res/values/dimensions.xml
@@ -26,4 +26,7 @@
 	<dimen name="andoku_padding_left">5dp</dimen>
 
 	<dimen name="andoku_keypad_distance">0dp</dimen>
+
+	<dimen name="keypad_button_text_size">17dp</dimen>
+	<dimen name="keypad_button_width">62dp</dimen>
 </resources>
