increased vertical distance between game grid and navigation buttons on xlarge screens
git-svn-id: http://andoku.googlecode.com/svn/trunk@422 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/layout/andoku.xml
+++ b/Andoku/res/layout/andoku.xml
@@ -139,7 +139,8 @@
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:baselineAligned="false">
+        android:baselineAligned="false"
+        android:layout_marginTop="@dimen/andoku_navigation_distance">
 
         <ImageButton
             android:id="@+id/buttonBack"
