--- a/Andoku/res/values/attrs.xml
+++ b/Andoku/res/values/attrs.xml
@@ -20,7 +20,16 @@
 -->
 
 <resources>
-
+  <declare-styleable name="com.google.ads.AdView">
+      <attr name="adSize">
+          <enum name="BANNER" value="1"/>
+          <enum name="IAB_MRECT" value="2"/>
+          <enum name="IAB_BANNER" value="3"/>
+          <enum name="IAB_LEADERBOARD" value="4"/>
+      </attr>
+      <attr name="adUnitId" format="string"/>
+  </declare-styleable>
+  
     <declare-styleable name="Theme">
         <attr name="buttonStyleKeypad" format="reference"/>
         <attr name="buttonStyleKeypadToggle" format="reference"/>
