--- a/Andoku/res/drawable/button_bg.xml
+++ b/Andoku/res/drawable/button_bg.xml
@@ -20,7 +20,7 @@
 -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:andoku="http://schemas.android.com/apk/res/com.googlecode.andoku">
+          xmlns:andoku="http://schemas.android.com/apk/res/com.googlecode.andokusquid">
     <item android:state_enabled="false"
         android:drawable="@drawable/button_disabled"/>
     <item android:state_pressed="true"
